# Looper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DGame.sln  README.md  conanfile.txt
DGame/: .clang-format  CMakeLists.txt  Common.h  Common.hpp  DGame.vcxproj  DGame.vcxproj.filters  Enemy.cpp  Enemy.h  Enemy.hpp  Font.cpp  Font.h  Font.hpp  Framebuffer.cpp  Framebuffer.h  Framebuffer.hpp  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Level.cpp  Level.h  Level.hpp  Main.cpp  PathFinder.cpp  PathFinder.h  PathFinder.hpp  Player.cpp  Player.h  Player.hpp  Shaders.cpp  Shaders.h  Shaders.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  Texture.cpp  Texture.h  Texture.hpp  (+10 more)
DGame/Assets/: GameInit.txt
DGame/Assets/Level1/: Level1.txt
DGame/Debug/: vc140.idb
DGame/Debug/DGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DGame/Shaders/: AfterEffects_fs.glsl  Font_fs.glsl
DGame/x64/Debug/: game.obj.enc  level.obj.enc  vc140.idb
dependencies/: CMakeLists.txt
dependencies/FMT/: CMakeLists.txt
dependencies/Freetype/: CMakeLists.txt
dependencies/GLM/: CMakeLists.txt
dependencies/Glad/: CMakeLists.txt
dependencies/Imgui/: CMakeLists.txt
dependencies/JSON/: CMakeLists.txt
dependencies/NANOGUI/: CMakeLists.txt
dependencies/OpenGL/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
dependencies/STB_IMAGE/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorObject.cpp  EditorObject.hpp  GameObjectWindow.cpp  GameObjectWindow.hpp  Gui.cpp  Gui.hpp  GuiBuilder.cpp  GuiBuilder.hpp  LevelWindow.cpp  LevelWindow.hpp  Main.cpp  Section.cpp  Section.hpp  editor.cpp  editor.hpp  editor_object.cpp  editor_object.hpp  gizmo.cpp  gizmo.hpp  main.cpp  render_data.hpp
editor/GUI/: EditorGUI.cpp  EditorGUI.hpp  Gui.cpp  Gui.hpp  GuiAPI.hpp  GuiBuilder.cpp  GuiBuilder.hpp  Section.cpp  Section.hpp
editor/GUI/EditorObjectWindow/: EditorObjectWindow.cpp  EditorObjectWindow.hpp
editor/GUI/GameObjectWindow/: GameObjectAnimationSection.cpp  GameObjectAnimationSection.hpp  GameObjectGeneralSection.cpp  GameObjectGeneralSection.hpp  GameObjectShaderSection.cpp  GameObjectShaderSection.hpp  GameObjectTransformSection.cpp  GameObjectTransformSection.hpp  GameObjectWindow.cpp  GameObjectWindow.hpp
editor/GUI/LevelWindow/: LevelGeneralSection.cpp  LevelWindow.cpp  (+6 more)
editor/gui/: editor_gui.cpp  editor_gui.hpp  editor_gui_level.cpp  editor_gui_object.cpp  editor_gui_render.cpp  helpers.hpp  icons.hpp
engine/: CMakeLists.txt  Common.hpp  Enemy.cpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Game.cpp  Game.hpp  GameObject.cpp  Level.cpp  PathFinder.hpp  Shaders.cpp  Shaders.hpp  Sprite.cpp  Texture.cpp  Weapon.hpp  Win_Window.cpp  Win_Window.fpp  Win_Window.gpp
engine/Common/: CMakeLists.txt  Common.hpp  Utils.cpp  Utils.hpp
engine/Core/: Application.cpp  Application.hpp
engine/FileManager/: CMakeLists.txt  FileManager.cpp  FileManager.hpp
engine/Game/: Animatable.cpp  Animatable.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Level.cpp  Level.hpp  Object.cpp  Object.hpp  PathFinder.cpp  PathFinder.hpp  Player.cpp  Player.hpp  Weapon.cpp  Weapon.hpp  game_object.cpp  game_object.hpp  path_finder.cpp
engine/Input/: CMakeLists.txt  Event.hpp  IInputListener.hpp  Input.cpp  Input.hpp  InputListener.hpp  InputManager.cpp  InputManager.hpp  KeyCodes.hpp  KeyCodesUtils.hpp  Mouse.hpp  input_listener.hpp  input_manager.hpp
engine/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  logger.impl.hpp
engine/Render/: CMakeLists.txt  Camera.cpp  Camera.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Shaders.cpp  Shaders.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TextureLibrary.cpp  TextureLibrary.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
engine/RenderVulkan/: Sprite.cpp  Sprite.hpp  buffer.cpp  command.cpp  common.cpp  common.hpp  renderer.cpp  renderer.hpp  shader.cpp  texture.cpp  texture.hpp  types.hpp  vertex.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command.cpp  vulkan_common.cpp  vulkan_common.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_shader.cpp  vulkan_texture.cpp  vulkan_texture.hpp
engine/Scene/: Camera.cpp  Camera.hpp
engine/Time/: CMakeLists.txt  Timer.cpp  Timer.hpp  scoped_timer.cpp  scoped_timer.hpp  stopwatch.cpp  stopwatch.hpp  time_step.cpp  time_step.hpp
engine/Utils/: assert.cpp
engine/Window/: CMakeLists.txt  Window.cpp  Window.hpp
engine/common/: common.hpp
engine/core/: application.cpp  application.hpp  state_list.hpp  thread_pool.cpp  thread_pool.hpp  work_queue.cpp  work_queue.hpp
engine/game/: animatable.cpp  animatable.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  level.cpp  level.hpp  object.cpp  object.hpp  path_finder.cpp  path_finder.hpp  player.cpp  player.hpp  weapon.cpp  weapon.hpp
engine/input/: event.hpp  input_listener.hpp  input_manager.cpp  input_manager.hpp
engine/logger/: formatter_types.hpp  logger.cpp  logger.hpp  logger.impl.hpp
engine/renderer/: Sprite.cpp  Sprite.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  helpers.hpp  light.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  types.hpp  vertex.cpp  vertex.hpp  vulkan_common.cpp  vulkan_common.hpp
engine/utils/: assert.cpp  assert.hpp  file_manager.cpp  file_manager.hpp
game/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp  main.cpp
(+944 files in other folders)
